--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,23 @@
 
 # Package Files #
 *.jar
+!lib/*.jar
 *.war
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+
+# macOS system files
+.DS_Store
+
+# Model files (trained weights)
+*.model
+params/
+
+# Claude Code
+.claude/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
